tests/test-files/parse-break.txt
================================================================================
1 Parse break
================================================================================

(package coalton-unit-tests)

(define f
  (for ()
    (break)))

================================================================================
2 Parse break
================================================================================

(package coalton-unit-tests)

(define f
  (for ()
    (let _x = True)
    (break)))

================================================================================
3 Parse break
================================================================================

(package coalton-unit-tests)

(define f
  (for ()
    :while true
    (break)))

================================================================================
4 Parse break
================================================================================

(package coalton-unit-tests)

(define f
  (for ()
    (let _x = 1)
    (break)))

================================================================================
5 Parse break
================================================================================

(package coalton-unit-tests)

(define f
  (for :alabel ()
    (break)))

================================================================================
6 Parse break
================================================================================

(package coalton-unit-tests)

(define f
  (for :alabel ()
    (break :alabel)))

================================================================================
7 Parse break
================================================================================

(package coalton-unit-tests)

(define f
  (for :somelabel ()
    (break :somelabel)))

================================================================================
100 Invalid break
================================================================================

(package test-parser)

(define f (break))

--------------------------------------------------------------------------------

error: Invalid break
  --> test:3:10
   |
 3 |  (define f (break))
   |            ^^^^^^^ break does not appear in an enclosing for

================================================================================
101 Invalid label in break
================================================================================

(package test-parser)

(define f
  (for :x ()
    (break :y)))

--------------------------------------------------------------------------------

error: Invalid label in break
  --> test:5:11
   |
 5 |      (break :y)))
   |             ^^ label not found in any enclosing for

================================================================================
102 Invalid label in break
================================================================================

(package test-parser)

(define f
  (for :x ()
    (return (fn () (break :x)))))

--------------------------------------------------------------------------------

error: Invalid label in break
  --> test:5:26
   |
 5 |      (return (fn () (break :x)))))
   |                            ^^ label not found in any enclosing for

================================================================================
103 Invalid break
================================================================================

(package test-parser)

(define f
  (for ()
    (return (fn () (break)))))

--------------------------------------------------------------------------------

error: Invalid break
  --> test:5:19
   |
 5 |      (return (fn () (break)))))
   |                     ^^^^^^^ break does not appear in an enclosing for
